refactor: BACKEND_REVIEW 4~8번 적용 (트랜잭션 경계, Jackson 3, record 전환)
한 커밋으로 묶었다. record 전환이 모든 호출부를 건드리고 ChatService는 4번 때문에
통째로 다시 썼기 때문에, 항목별로 쪼개면 중간 커밋이 컴파일되지 않는다.

## 4. 트랜잭션 경계를 DB 작업 구간으로 좁힘

processChat 전체가 하나의 @Transactional이었고 그 안에서 최대 60초짜리 AI 호출을
했다. 그동안 DB 커넥션 하나가 놀면서 묶여 있었다. HikariCP 기본 풀 10개, 대기
타임아웃 30초라 동시 사용자 11명이면 나머지는 30초 뒤 실패한다. AI 서버가 느려지면
그 여파가 커넥션 고갈로 번져 채팅과 무관한 API까지 같이 죽는다.

ChatPersistenceService를 새로 만들어 DB 접근을 전부 옮겼다. ChatService에는
@Transactional이 하나도 없다. 별도 빈으로 나눈 것은 필요 때문이다. @Transactional은
프록시로 동작해서 같은 클래스 안에서 this.method()로 부르면 트랜잭션이 아예 걸리지
않는다(self-invocation).

문서의 스케치와 다르게 갔다. 스케치대로 USER 메시지를 AI 호출 전에 저장하면
히스토리 복원이 방금 저장한 질문을 자기 맥락으로 다시 읽는다. 또 소유권 확인은
Redis 히스토리 읽기보다 반드시 먼저여야 한다. 뒤집히면 남의 sessionId로 그 사람의
대화 맥락을 LLM 컨텍스트로 받아볼 수 있다.

DB를 먼저 쓰고 Redis를 나중에 쓴다. Redis는 JPA 트랜잭션에 참여하지 않으므로
순서가 반대면 롤백돼도 Redis에 남아 다음 턴 컨텍스트가 오염된다.

## 5. Jackson 2 제거

RedisConfig의 Jackson 2 ObjectMapper 빈은 Boot 4의 기본이 Jackson 3라 웹 계층에
닿지 못했다. 설정은 있는데 효과는 없고 읽는 사람은 있다고 믿는 상태였다.
빈과 의존성 두 줄을 지우고 tools.jackson으로 옮겼다. 예외가 unchecked로 바뀌어
catch (Exception)을 catch (JacksonException)으로 좁혔다.

## 6. @CrossOrigin(origins = "*") 삭제

동일 출처라 애초에 불필요했다.

## 7. 타임아웃을 spring.http.clients.*로 (그리고 그 과정에서 앱이 깨졌다)

requestFactory()를 떼고 Boot 기본에 맡겼더니 AI 호출이 전부 422로 실패했다.
ai-server가 "본문 없음"을 받았다. 전송 구현이 JDK HttpClient로 바뀌었고, 이건
HTTP/2가 기본이라 평문 연결에서 h2c 업그레이드를 시도하는데, uvicorn(h11)이
그걸 거절하면서 본문이 사라진다.

spring.http.clients.imperative.factory=simple로 HTTP/1.1을 명시했다.
AiEngineRequestTransportTest가 Upgrade/HTTP2-Settings 헤더가 없는지 확인한다.
일부러 jdk로 되돌려 이 테스트가 실제로 실패하는 것까지 확인했다.

문서의 속성 이름도 정정했다. spring.http.client.*(단수)는 Boot 4.0에서 폐기됐다.

## 8. 잔손질

와일드카드 import 정리, ResponseEntity<List<...>> → List<...>, DTO 6종 record 전환.
존재하지 않는 sessionId가 오면 그 ID를 쓰지 않고 서버가 새로 발급한다.

## 검증

테스트 11건 통과 (ChatServiceTest 5, ChatControllerErrorHandlingTest 4,
AiEngineRequestTransportTest 1, contextLoads 1).

실제 Postgres/Redis/ai-server에 붙여 멀티턴 대화 2턴, 대화방 목록, 메시지 내역,
남의 대화방 접근 404까지 확인했다. 확인용으로 만든 데이터는 지웠다(두 테이블 0행).
